--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,41 +1,12 @@
 sidebar-sample:
-  - title: "Parent Page A"
+  - title: "Parent Testing"
     children:
-      - title: "Child Page A1"
+      - title: "Test1"
         url: /
-      - title: "Child Page A2"
+      - title: "Test2"
         url: /
-      - title: "Child Page A3"
+      - title: "Test3"
         url: /
-      - title: "Child Page A4"
+      - title: "Test4"
         url: /
-  - title: "Parent Page B"
-    children:
-      - title: "Child Page B1"
-        url: /
-      - title: "Child Page B2"
-        url: /
-      - title: "Child Page B3"
-        url: /
-      - title: "Child Page B4"
-        url: /
-      - title: "Child Page B5"
-        url: /
-  - title: "Parent Page C"
-    children:
-      - title: "Child Page C1"
-        url: /
-      - title: "Child Page C2"
-        url: /
-      - title: "Child Page C3"
-        url: /
-      - title: "Child Page C4"
-        url: /
-      - title: "Child Page C5"
-        url: /
-  - title: "Parent Page D"
-    children:
-      - title: "Child Page D1"
-        url: /
-      - title: "Child Page D2"
-        url: /
+
